[metadata]
name = encriptador
version = 1.0.0
author = Jaime Andres Feldman
author_email = jaimefel@gmail.com
description = Proyecto de pruebas de encriptación con gnupg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jaimefeldman/porj.gnupg
project_urls =
    Bug Tracker = https://github.com/jaimefeldman/porj.gnupg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux


[options]
package_dir =
    = src
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires = 
    termcolor>=2.3.0
    build>=0.10.0
    packaging>=23.1
    pyproject_hooks>=1.0.0

[options.entry_points]
console_scripts = 
    saluda = encriptador.launcher.__main__:main 

[options.packages.find]
where = src

